samples/_failures_safe/1761730004_259439_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7ed3c121.c: In function ‘main’:
./samples/SAFE/__tmp_7ed3c121.c:161:5: error: ‘add’ undeclared (first use in this function)
  161 |     add
      |     ^~~
./samples/SAFE/__tmp_7ed3c121.c:161:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_7ed3c121.c:161:8: error: expected ‘;’ at end of input
  161 |     add
      |        ^
      |        ;
./samples/SAFE/__tmp_7ed3c121.c:161:5: error: expected declaration or statement at end of input
  161 |     add
      |     ^~~
